# wasmer-rust-bazel

./: .gitignore  .gitmodules  LICENSE  README.md  WORKSPACE
app/: BUILD
cargo/: BUILD  Cargo.toml  raze.sh
cargo/patch/typenum-1.11.2/: include_env.patch
tools/: rust_toolchains.bzl
