[package]
name = "rust_embedder_app"
version = "0.4.0"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>, KaiserKarel"]
edition = "2018"

[lib]
path = "fake_lib.rs"

[dependencies]
wasmer-runtime = "0.13.1"

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
target = "x86_64-unknown-linux-gnu"

[raze.crates.serde.'1.0.1']
gen_buildrs = true

[raze.crates.wasmer-runtime.'0.13.1']
gen_buildrs = true

[raze.crates.wasmer-runtime-core.'0.13.1']
gen_buildrs = true
cfg = ["target_arch=x86_64"]

[raze.crates.target-lexicon.'0.9.0']
gen_buildrs = true

[raze.crates.cranelift-codegen.'0.52.0']
gen_buildrs = true

[raze.crates.indexmap.'1.3.2']
gen_buildrs = true

[raze.crates.typenum.'1.11.2']
gen_buildrs = true
patches = ["@wasmer-rust-bazel//cargo/patch/typenum-1.11.2:include_env.patch"]

[raze.crates.proc-macro2.'1.0.9']
additional_flags = [
    "--cfg=use_proc_macro",
]
